# exasol_challenge

./: CMakeLists.txt  Client.cpp  Client.h  Connection.h  DummyConnection.cpp  DummyConnection.h  NetworkConnection.cpp  NetworkConnection.h  crt.pem  key.pem  main.cpp  utils.cpp  utils.h
commands/: Combinations.cpp  Combinations.h  Command.h  EndCommand.cpp  EndCommand.h  HelloCommand.cpp  HelloCommand.h  PowCommand.cpp  PowCommand.h  SendDataCommand.cpp  SendDataCommand.h
